== 0.1.4 / 2012-02-28

* fix bug in extra fields

== 0.1.3 / 2012-02-28

* Accept :extra_fields as an option for track, to cache extra fields on the timeline post.

== 0.1.2 / 2012-02-25

* Add ActiveModel::Naming to Timeline::Activity so that it can be passed to the render method in Rails.


== 0.1.1 / 2012-02-24

* Add json-ified object to lists.


== 0.1.0 / 2012-02-17

* First commit